--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: NNAT
 subtitle: ''
-description: ''
+description: 'Netease News Android Team'
 keywords:
 author: John Doe
 language: en
@@ -98,9 +98,11 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: huxblog
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://nnateam.github.io
+  branch: main
